# irg-lab

./: .gitignore  README.md  irg-lab.sln  irg-lab.sln.DotSettings
exercise1/: exercise1.filters  main.cpp  (+2 more)
graphics/: CMakeLists.txt  animation_app.hpp  app.hpp  app_base.hpp  app_safe.hpp  app_unsafe.hpp  artist.hpp  assets.hpp  body.hpp  body_app.hpp  bounds.hpp  camera.hpp  conanfile.txt  convex_body.hpp  convex_polygon.hpp  convex_polygon_app.hpp  cpp.hint  curve.hpp  debug_manager.hpp  device.hpp  direction.hpp  environment.hpp  extensions.hpp  fractal_app.hpp  graphics.vcxproj  graphics.vcxproj.filters  graphics.vcxproj.filters.orig  graphics.vcxproj.orig  light_source.hpp  main.cpp  main.cpp.orig  main_safe.hpp  main_unsafe.hpp  memory_manager.hpp  pch.hpp  pipeline.hpp  pre-build.ps1  primitive_operations.hpp  primitives.hpp  render_pass.hpp  (+16 more)
graphics/assets/shaders/: fractal_shader.frag  fragment_shader.frag  vertex_shader.vert
graphics/shaders/: fractal_shader.frag  fragment_shader.frag  vertex_shader.vert
graphics/source/: main.cpp
graphics/source/app/: animation_app.hpp  app_base.hpp  fractal_app.hpp
graphics/source/environment/: assets.hpp  debug_printer.hpp  device.hpp  environment.hpp  window.hpp
graphics/source/geometry/: body.hpp  curve.hpp  triangle.hpp  vertex.hpp  wire.hpp  wireframe.hpp
graphics/source/geometry/objects/: tetrahedron.hpp
graphics/source/renderer/: MemoryManager.hpp  pipeline.hpp  render_pass.hpp  renderer.hpp  shader_manager.hpp  swapchain.hpp  synchronizer.hpp
graphics/source/scene/: camera.hpp  light_source.hpp
(+36 files in other folders)
